test/files/neg/xmltruncated4.scala
object Main {
  val stuff = <!-- comment starts but never ends...
