test/files/neg/xmltruncated4.check
xmltruncated4.scala:2: error: input ended while parsing XML
  val stuff = <!-- comment starts but never ends...
                                                   ^
1 error
